Migrate from Number subclass APIs deprecated in Java 9