@@ -165,12 +165,11 @@ public class ArgTag extends BaseClassLoaderTag {
             Converter converter = (Converter) (converterMap.get(klass));
             if (null == converter) {
                 throw new JellyTagException("Can't convert " + value + " to " + klass);
-            } else {
-                try {
-                    return converter.convert(klass, value);
-                } catch (ConversionException e) {
-                    throw new JellyTagException("Can't convert " + value + " to " + klass + " (" + e.toString() + ")", e);
-                }
+            }
+            try {
+                return converter.convert(klass, value);
+            } catch (ConversionException e) {
+                throw new JellyTagException("Can't convert " + value + " to " + klass + " (" + e.toString() + ")", e);
             }
         } else {
             return value;
@@ -197,7 +196,7 @@ public class ArgTag extends BaseClassLoaderTag {
                 @Override
                 public Object convert(Class klass, Object value) {
                     if (value instanceof Number) {
-                        return new Byte(((Number) value).byteValue());
+                        return Byte.valueOf(((Number) value).byteValue());
                     } else {
                         return inner.convert(klass, value);
                     }
@@ -213,7 +212,7 @@ public class ArgTag extends BaseClassLoaderTag {
                 @Override
                 public Object convert(Class klass, Object value) {
                     if (value instanceof Number) {
-                        return new Short(((Number) value).shortValue());
+                        return Short.valueOf(((Number) value).shortValue());
                     } else {
                         return inner.convert(klass, value);
                     }
@@ -229,7 +228,7 @@ public class ArgTag extends BaseClassLoaderTag {
                 @Override
                 public Object convert(Class klass, Object value) {
                     if (value instanceof Number) {
-                        return new Integer(((Number) value).intValue());
+                        return Integer.valueOf(((Number) value).intValue());
                     } else {
                         return inner.convert(klass, value);
                     }
@@ -245,7 +244,7 @@ public class ArgTag extends BaseClassLoaderTag {
                 @Override
                 public Object convert(Class klass, Object value) {
                     if (value instanceof Number) {
-                        return new Long(((Number) value).longValue());
+                        return Long.valueOf(((Number) value).longValue());
                     } else {
                         return inner.convert(klass, value);
                     }
@@ -261,7 +260,7 @@ public class ArgTag extends BaseClassLoaderTag {
                 @Override
                 public Object convert(Class klass, Object value) {
                     if (value instanceof Number) {
-                        return new Float(((Number) value).floatValue());
+                        return Float.valueOf(((Number) value).floatValue());
                     } else {
                         return inner.convert(klass, value);
                     }
